spell check and cv update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-critters-container>
   <head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="utf-8">
-    <title>Jen Jacobsen | JJ</title>
+    <title>Website</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -14,5 +14,5 @@
 </style><link rel="stylesheet" href="styles-6R3DDVKW.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-6R3DDVKW.css"></noscript><link rel="modulepreload" href="chunk-NTVU53HJ.js"></head>
   <body class="mat-typography">
     <app-root></app-root>
-  <script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-MM75RGYM.js" type="module"></script></body>
+  <script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-WSRV23OT.js" type="module"></script></body>
 </html>
